--- a/app/assets/stylesheets/classes/lists.scss
+++ b/app/assets/stylesheets/classes/lists.scss
@@ -26,10 +26,11 @@
 }
 
 .list {
-  ul.item {
+  ul.items {
     margin-bottom: 20px;
 
     li {
+      cursor: pointer;
       margin-bottom: 5px;
 
       form {
