--- a/views/list.erb
+++ b/views/list.erb
@@ -5,7 +5,7 @@
 
 <div class="list">
   <% if !@items.empty? %>
-      <ul class="item">
+      <ul class="items">
         <% @items.each do |item| %>
           <li>
             <%= item %>
